--- a/Julfiker_Portfolio/Views/Home/Experience.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Experience.cshtml
@@ -18,8 +18,8 @@
                             West Virginia Department of Health and Human Resources
                         </a>
                     </strong><br />
-                    <span class="text-muted">May 2024 – Present</span><br />
-                    Department of MIS
+                    <span class="text-muted fw-bold">May 2024 – Present</span><br />
+                    <em class="text-secondary">Department of MIS</em>
                 </p>
                 <ul class="text-light">
                     <li>Develop dynamic web applications using C# .NET, ASP.NET MVC, and SQL Server, optimizing data retrieval and overall performance.</li>
@@ -39,12 +39,8 @@
                             West Virginia State University
                         </a>
                     </strong><br />
-                    <span class="text-muted">Jan 2023 – Dec 2024</span><br />
-                    <strong>
-                        <a href="https://wvstateu.edu/college-of-natural-sciences-and-mathematics/departments/mathematics-and-computer-science/" target="_blank" class="text-warning text-decoration-none">
-                            Department of Math &amp; Computer Science
-                        </a>
-                    </strong>
+                    <span class="text-muted fw-bold">Jan 2023 – Dec 2024</span><br />
+                    <em class="text-secondary">Department of Math &amp; Computer Science</em>
                 </p>
                 <ul class="text-light">
                     <li>Conducted research in AI/ML-driven cybersecurity at the Cybersecurity Innovation Center, focusing on detecting and defending against cyberattacks targeting critical infrastructure (e.g., phishing, ransomware, DDoS).</li>
@@ -64,8 +60,8 @@
                             West Virginia Department of Transportation
                         </a>
                     </strong><br />
-                    <span class="text-muted">May 2023 – Aug 2023</span><br />
-                    Traffic Engineering Division
+                    <span class="text-muted fw-bold">May 2023 – Aug 2023</span><br />
+                    <em class="text-secondary">Traffic Engineering Division</em>
                 </p>
                 <ul class="text-light">
                     <li>Automated crash data analysis processes using C++ and VBA, reducing manual effort by 40%.</li>
