--- a/Julfiker_Portfolio/Views/Home/Resume.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Resume.cshtml
@@ -31,8 +31,8 @@
                 <h5 class="fw-semibold text-light">💼 Experience</h5>
                 <ul class="text-light">
                     <li>Software Programmer Intern, WV DHHR – May 2024 to Present</li>
-                    <li>Graduate Research & Teaching Assistant, WVSU – Jan 2023 to Present</li>
-                    <li>IT Assistant Intern, WV Department of Transportation – Summer 2023</li>
+                    <li>Graduate Research & Teaching Assistant, WVSU – Jan 2023 to Dec 2024</li>
+                    <li>Information System Analyst Intern, WV Department of Transportation – May 2023 to Aug 2023</li>
                 </ul>
             </div>
 
