--- a/Julfiker_Portfolio/Views/Home/Experience.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Experience.cshtml
@@ -59,7 +59,7 @@
             <!-- Job 3 -->
             <div class="exp-card mb-4">
                 <div class="d-flex justify-content-between align-items-center">
-                    <h5 class="fw-semibold text-light mb-0">IT Assistant - Intern</h5>
+                    <h5 class="fw-semibold text-light mb-0">IT Analyst - Intern</h5>
                     <span class="text-warning fw-bold">May 2023 – Aug 2023</span>
                 </div>
                 <p class="text-light mb-1">
